add card basic styling

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "flexbox"
   ],
   "author": "@zaretmir",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "sass": "^1.27.0"
+  }
 }
