--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "sass": "^1.27.0"
+  },
+  "dependencies": {
+    "parcel-bundler": "^1.12.4"
   }
 }
