--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
   "author": "@zaretmir",
   "license": "ISC",
   "devDependencies": {
+    "parcel-bundler": "^1.12.4",
     "sass": "^1.27.0"
   },
-  "dependencies": {
-    "parcel-bundler": "^1.12.4"
-  }
+  "dependencies": {}
 }
